--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
   <div id="log"></div>
 
   <script type="module">
-    import { BufferedChannel, DataMessage, AckMessage } from '../dist/buffered-channel.js'
+    import { BufferedChannel } from '../dist/buffered-channel.js'
 
     const logDiv = document.getElementById('log')
 
